@@ -1,0 +1,8 @@
+Title: LDAP: Default configuration of attributes is reflected within WATO now
+Level: 1
+Component: wato
+Version: 1.2.4b1
+Date: 1387271448
+Class: fix
+
+
